dist_man1_MANS=

if BUILD_wentunoD
  dist_man1_MANS+=wentunod.1
endif

if ENABLE_QT
  dist_man1_MANS+=wentuno-qt.1
endif

if BUILD_wentuno_CLI
  dist_man1_MANS+=wentuno-cli.1
endif

if BUILD_wentuno_TX
  dist_man1_MANS+=wentuno-tx.1
endif

if ENABLE_WALLET
if BUILD_wentuno_WALLET
  dist_man1_MANS+=wentuno-wallet.1
endif
endif
